--- a/index.html
+++ b/index.html
@@ -26,14 +26,49 @@
       </div>
     </div>
 
-
     <div class="row personal-data">
       <div class=" col-lg-6 col-md-6 col-xs-12">
 
+          <div class="row box DeepSkyBlue">
+              <h2>机器学习任务：深度学习实战
+                <span class="label label-info margin">Python</span>
+                <span class="label label-warning">new</span>
+                <span class="label label-default">学习性质</span>
+              </h2>
+              <p>时间：2017-12-25</p>
+              <p>任务系数：&#9733&#9733&#9733&#9733</p>
+              <p>深度学习相关
+              </p>
+              <a href="detail/2017122503.html" target="_blank">查看详情</a>
+            </div>
+
+        <div class="row box cloud">
+          <h2>编程语言任务：生成条形码
+            <span class="label label-info margin">C#</span>
+            <span class="label label-warning">new</span>
+          </h2>
+          <p>时间：2017-12-25</p>
+          <p>任务系数：&#9733&#9733&#9733&#9733</p>
+          <p>条形码运用于各式各样的产品中。假如有一天你需要为一个仓库设计一套进出统计系统，条形码应该是记录产品编号的很好的选择
+          </p>
+          <a href="detail/2017122502.html" target="_blank">查看详情</a>
+        </div>
+
+        <div class="row box red">
+          <h2>机器学习任务：泰坦尼克号存活预测
+            <span class="label label-info margin">Python</span>
+            <span class="label label-warning">new</span>
+          </h2>
+          <p>时间：2017-12-25</p>
+          <p>任务系数：&#9733&#9733&#9733&#9733</p>
+          <p>轰动世界的泰坦尼克号沉没事件已经过去好些年了，存活的人和死亡的人貌似存在着某种联系。包括社会地位，当时所在位置等等。 这次任务就是通过机器学习，预测死亡
+          </p>
+          <a href="detail/2017122501.html" target="_blank">查看详情</a>
+        </div>
+
         <div class="row box moccasin">
           <h2>编程语言任务：字符串进阶：爬虫
-            <span class="label label-info margin">new</span>
-            <span class="label label-info">C# & Python</span>
+            <span class="label label-info margin">C# & Python</span>
           </h2>
           <p>时间：2017-12-14</p>
           <p>任务系数：&#9733&#9733&#9733&#9733</p>
@@ -44,8 +79,7 @@
 
         <div class="row box cloud">
           <h2>编程语言任务：字符串操作
-            <span class="label label-info margin">new</span>
-            <span class="label label-info">C# & Python</span>
+            <span class="label label-info margin">C# & Python</span>
           </h2>
           <p>时间：2017-12-14</p>
           <p>任务系数：&#9733&#9733&#9733</p>
@@ -56,8 +90,7 @@
 
         <div class="row box  green">
           <h2>机器学习任务：关于癌症的预测问题
-            <span class="label label-info margin">new</span>
-            <span class="label label-info">Python</span>
+            <span class="label label-info margin">Python</span>
           </h2>
           <p>时间：2017-12-13</p>
           <p>任务系数：&#9733&#9733&#9733&#9733</p>
@@ -71,8 +104,7 @@
 
         <div class="row box red">
           <h2>机器学习任务：输出文章对应主题
-            <span class="label label-info margin">new</span>
-            <span class="label label-info">Python</span>
+            <span class="label label-info margin">Python</span>
           </h2>
           <p>时间：2017-12-13</p>
           <p>任务系数：&#9733&#9733&#9733&#9733&#9733</p>
@@ -98,6 +130,12 @@
               <td>系</td>
               <td>个人信息</td>
               <td>分数</td>
+            </tr>
+            <tr>
+              <td>李金原</td>
+              <td>计算机</td>
+              <td></td>
+              <td style="color: red">7</td>
             </tr>
             <tr>
               <td>赵建军</td>
@@ -169,12 +207,6 @@
               <tr>
                 <td>何长城</td>
                 <td>数理</td>
-                <td></td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>李金原</td>
-                <td>计算机</td>
                 <td></td>
                 <td>0</td>
               </tr>
