--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <td>高泽阳</td>
                 <td>能动</td>
                 <td></td>
-                <td>0</td>
+                <td style="color: red">4</td>
               </tr>
               <tr>
                 <td>古珊珊</td>
