--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
               <td style="color: red">3</td>
             </tr>
             <tr>
+                <td>余江银</td>
+                <td>数理</td>
+                <td></td>
+                <td style="color: red">4</td>
+            </tr>
+            <tr>
               <tr>
                 <td>高泽阳</td>
                 <td>能动</td>
@@ -189,12 +195,6 @@
               </tr>
               <tr>
                 <td>焦冰洁</td>
-                <td>数理</td>
-                <td></td>
-                <td>0</td>
-              </tr>
-              <tr>
-                <td>余江银</td>
                 <td>数理</td>
                 <td></td>
                 <td>0</td>
